--- a/src/main/resources/FXML/Window.fxml
+++ b/src/main/resources/FXML/Window.fxml
@@ -5,14 +5,12 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dragontec.besm.MechBuilder.gui.GuiController">
+<Pane id="MPane" fx:id="MPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dragontec.besm.MechBuilder.gui.GuiController">
    <children>
       <TextField id="NameField" fx:id="NameField" layoutX="403.0" layoutY="206.0" promptText="Name" />
-      <TextField id="EffectField" fx:id="EffectField" layoutX="403.0" layoutY="249.0" prefHeight="122.0" prefWidth="149.0" promptText="Effect" />
-      <TextField id="DescriptionField" fx:id="DescriptionField" layoutX="403.0" layoutY="381.0" prefHeight="158.0" prefWidth="149.0" promptText="Description" />
       <TextField id="CostField" fx:id="CostField" layoutX="396.0" layoutY="561.0" promptText="Cost" />
-      <Button layoutX="390.0" layoutY="601.0" mnemonicParsing="false" onAction="#putAttribute" text="Put Attribute" />
-      <TableView id="SheetTable" fx:id="SheetTable" editable="true" layoutX="10.0" layoutY="59.0" prefHeight="567.0" prefWidth="370.0">
+      <Button fx:id="PutButton" layoutX="390.0" layoutY="601.0" mnemonicParsing="false" onAction="#putAttribute" text="Put Attribute" />
+      <TableView id="SheetTable" fx:id="SheetTable" editable="true" layoutX="10.0" layoutY="59.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="371.0">
         <columns>
           <TableColumn id="NameColumn" fx:id="NameColumn" prefWidth="75.0" text="Name" />
           <TableColumn id="EffectColumn" fx:id="EffectColumn" prefWidth="123.0" text="Effect" />
@@ -24,8 +22,10 @@
       <TextField id="MechPointsLeft" fx:id="MechPointsLeft" editable="false" layoutX="179.0" layoutY="14.0" promptText="Mech Points Left" />
       <Button id="UpdateMechPoints" layoutX="354.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateMechPoints" text="Update Mech Points" />
       <Label id="MessageLabel" fx:id="MessageLabel" layoutX="395.0" layoutY="102.0" prefHeight="86.0" prefWidth="165.0" />
-      <Button layoutX="390.0" layoutY="53.0" mnemonicParsing="false" onAction="#SaveMech" text="Save" />
-      <Button layoutX="464.0" layoutY="53.0" mnemonicParsing="false" onAction="#LoadMech" text="Load" />
-      <Button layoutX="493.0" layoutY="601.0" mnemonicParsing="false" onAction="#DeleteAttribute" text="Delete" />
+      <Button id="SaveButton" fx:id="SaveButton" layoutX="390.0" layoutY="53.0" mnemonicParsing="false" onAction="#SaveMech" text="Save" />
+      <Button id="LoadButton" fx:id="LoadButton" layoutX="464.0" layoutY="53.0" mnemonicParsing="false" onAction="#LoadMech" text="Load" />
+      <Button fx:id="DeleteButton" layoutX="493.0" layoutY="601.0" mnemonicParsing="false" onAction="#DeleteAttribute" text="Delete" />
+      <TextArea fx:id="EffectArea" layoutX="385.0" layoutY="239.0" prefHeight="125.0" prefWidth="200.0" promptText="Effect" />
+      <TextArea fx:id="DescrArea" layoutX="385.0" layoutY="371.0" prefHeight="182.0" prefWidth="200.0" promptText="Description" />
    </children>
 </Pane>
